Changes in openair 0.4-12 [2011-03-22]
=====================================

*	Added y.relation option to smoothTrend and MannKendall to
         allow flexible y-scales.
*	NEW FUNCTION percentileRose for flexible plotting of
         percentiles by wind direction
*	Modified plot layout in polarPlot to maximise plotting area
*	Initial fixes to functions affected by time zone settings

Changes in openair 0.4-11 [2011-03-18]
=====================================

*	More consistent use of strips in default plot (remove them)
*	Add percentage units to windRose and pollutionRose on radial scale

Changes in openair 0.4-10 [2011-03-07]
=====================================

*	Fixed calendarPlot main/quickText handling.
*	Fixed calendarPlot first day of month error.
*	Fixed summaryPlot site ordering when more than one site.

Changes in openair 0.4-9 [2011-03-04]
=====================================

*	Added new options to scatterPlot (plot.type, lwd, and lty)
         making it possible to add points and/or lines
	 

Changes in openair 0.4-8 [2011-02-24]
=====================================

*	Added new cutData type option 'daylight', enabled using new function
	cutDaylight.


Changes in openair 0.4-7 [2011-02-16]
=====================================

*     Added new function conditionalQuantile for model
      evaluation purposes.
*     Fixed importAURN to account for a change in web domain
      address at AEA.

