@@ -250,7 +250,7 @@ timePlot <- function(mydata,
            lwd = lwd,
            pch = pch,
            xlim = xlim,
-           main = quickText(main),
+           main = quickText(main, auto.text),
            par.strip.text = list(cex = 0.8),
            ylab = quickText(ylab, auto.text),
            scales = scales,
